--- a/css/style.css
+++ b/css/style.css
@@ -41,12 +41,12 @@ p {
   font-family: 'saiyan_sansregular';
 }
 
-#index-banner {
+#index-banner, #count-banner {
   height: 100%;
   min-height: 320px;
 }
 
-#index-banner .container {
+#index-banner .container, #count-banner .container {
   height: 100%;
   display: flex;
   justify-content: center;
@@ -89,16 +89,20 @@ p {
     position: absolute;
     top: 40%;
   }
-  #count-banner .section {
-    top: 10%;
-  }
-
-  
 }
 
 @media only screen and (max-width : 600px) {
-  #count-banner .section {
-    top: 0;
+  #index-banner .saiyan-sans {
+	font-size: 5rem;
+  }
+}
+
+@media only screen and (max-width : 480px) {
+  #index-banner .saiyan-sans {
+	font-size: 4rem;
+  }
+  #index-banner h3 {
+	font-size: 2.5rem;
   }
 }
 
