Ajeita layout para mostrar os nomes do desenvolvedores do site na versão móvel

--- a/css/style.css
+++ b/css/style.css
@@ -249,3 +249,7 @@ footer.page-footer {
   color: white;
   background-color: #f29921;
 }
+
+.footer-copyright .container{
+    line-height: 100%;
+}
