Nova fase do curso de Desenvolvimento Web - 2018

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ p {
 }
 
 .button-collapse {
-  color: #26a69a;
+  color: #2A3A55;
 }
 
 .parallax-container {
@@ -240,14 +240,14 @@ footer.page-footer {
 }
 
 .btn-dbz {
-  color: #f29921;
+  color: #2a3a55;
   background-color: white;
   margin: 10px 0 50px;
 }
 
 .btn-dbz:hover {
   color: white;
-  background-color: #f29921;
+  background-color: #2a3a55;
 }
 
 .footer-copyright .container{
