Troca a cor da navbar

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ a {
   background-color: #17101d;
 }
 .navbar-default .navbar-header .navbar-brand {
-  color: white;
+  color: #00D79C;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
