--- a/css/creative.css
+++ b/css/creative.css
@@ -350,8 +350,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: white;
-  background-color: #ee4b28;
-  border-color: #ed431f;
+  background-color: #00D79C;
+  border-color: #00D79C;
 }
 .btn-primary:active,
 .btn-primary.active,
